--- a/manifest.json
+++ b/manifest.json
@@ -2,31 +2,38 @@
   "manifest_version": 3,
   "name": "GardX",
   "version": "1.0",
-
   "permissions": [
     "storage",
     "activeTab",
     "scripting"
   ],
-
   "host_permissions": [
     "<all_urls>"
   ],
-
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "scripts": ["background.js"]
   },
-
   "content_scripts": [
-  {
-    "matches": ["http://*/*", "https://*/*"],
-    "js": ["content.js"],
-    "run_at": "document_idle",
-    "all_frames": true
-  }
- ],
-
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "browser-polyfill.min.js",
+        "content.js"
+      ],
+      "run_at": "document_idle",
+      "all_frames": true
+    }
+  ],
   "action": {
     "default_popup": "popup.html"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "gardx@robinkp.local",
+      "strict_min_version": "109.0"
+    }
   }
 }
